<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Projeto10</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_extrato">Extrato</string>
    <string name="title_activity_manter_lancamento">Lançamento</string>
    <string name="extrato">EXTRATO</string>
    <string name="valor">Valor:</string>
    <string name="receita">Receita</string>
    <string name="despesa">Despesa</string>
    <string name="salvar">Salvar</string>
    <string name="tipoLancamento">Tipo Lançamento:</string>

</resources>
