<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
	
    <TextView
        android:id="@+id/lbTipo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipoLancamento" 
        android:labelFor="@+id/txtipo"/>

    <EditText
        android:id="@+id/txtipo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:gravity="center_horizontal">

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/lbValor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor" 
        android:labelFor="@+id/txValor"/>

    <EditText
        android:id="@+id/txValor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" 
        android:gravity="center_horizontal">

    </EditText>
    
		<RadioGroup 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:gravity="center_horizontal">
        	<RadioButton
            android:id="@+id/rdReceita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/receita" />

        <RadioButton
            android:id="@+id/rdDespesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/despesa" />
        </RadioGroup>
	
	<Button android:id="@+id/btSalvar"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/salvar"/>
</LinearLayout>
